src/components/Post/Post.css
/* General Post Styles */
.post {
    list-style-type: none;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    overflow: hidden;
    border-radius: 8pt;
    transition: background-color .5s;
    padding-bottom: 1rem;
}

.post:hover {
    cursor: pointer;
}

.post:hover .score,
.post:hover ~ .score {
    visibility: visible !important;
}

.post .score svg {
    width: 1.5rem; 
    height: 1.5rem; 
}

.post .score p {
    margin-left: 0; 
}

.post video {
    max-width: 100%;
    max-height: 90%;
    height: auto;
}

/* Inactive Post Styles */
.inactive .post {
    height: 8rem;
    margin: .25rem 0 .35rem;
    background-color: #eceae6;
}

.inactive .post:hover {
    background-color: #7da1c4;
    box-shadow: #393863;
}

.inactive .post .content {
    display: none;
}

.inactive .post .score {
    display: flex;
    visibility: collapse;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 7%;
    height: 110%;
    padding-top: 1.5rem;
    background-color: #6e6e6ed0;
    color: rgb(0, 0, 0);
    transition: background-color .5s, color .5s;
}

.inactive:hover .post .score {
    background-color: #424b6b;
    color: white;
}

.inactive .post .score p {
    font-size: 85%;
}

/* Active Post Styles */
.active .post {
    height: 35rem;
    background-color: #7da1c4;
}

.active .post .score {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 8%;
    height: 110%;
    background-color: #424b6b;
    color: white;
}

.active .post .content {
    max-width: 100%;
    max-height: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.active .content img {
    max-width: 85%;
    max-height: 85%;
    border-radius: 4pt;
}

.active .content .link,
.active .content .gallery {
    height: 90%;
    padding-top: 40%;
    width: 100%;
    text-align: center;
    margin: 0;
    padding-bottom: 7rem;

}

.active .content .gallery img {
    max-width: 100%;
    height: auto;
}

.active .content .text {
    font-size: 1rem;
    height: 90%;
    width: 95%;
    overflow: hidden;
}

/* Score Styles */
.post .score p {
    font-weight: 600;
    font-size: 85%;
}

/* Left and Right Side Styles */
.post .left-side {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 20%;
    height: 100%;
}

.post .left-side img {
    aspect-ratio: auto 100/100;
    max-height: 75%;
    max-width: 75%;
    border-radius: 4pt;
}

.post .right-side {
    width: 85%;
    height: 100%;
}

.post .right-side .top {
    display: flex;
    width: 100%;
    margin: .5rem -1rem 0;
}

.post .right-side .top p {
    font-size: .8rem;
    padding: .1rem .5rem;
    margin: 0;
}

.post .right-side .top .subreddit {
    font-weight: bold;
}

.post .right-side .top .subreddit:hover {
    font-style: italic;
    text-decoration: underline;
}

.post .right-side .top .author {
    font-style: italic;
    margin-right: .5rem;
}

.post .right-side .bottom {
    margin: 0;
}

.post .right-side .bottom .title {
    width: 92%;
    font-size: 1.4rem;
    font-weight: 600;
    margin-left: 1rem;
}

/* Comments Toggle */
.inactive .comments-toggle,
.inactive .hidden,
.active .hidden {
    display: none;
}

.post .show {
    display: block;
}




.active .post .comments-toggle {
    position: relative;
    display: flex;
    flex-direction: column;
    margin-top: 31rem;
    margin-right: .25rem;
    border: none;
    height: 10%;
    width: 15%;
    cursor: pointer;
    border-radius: 4pt;
    font-size: .7rem;
    background-color: rgb(185, 185, 185);
}

.active .post .comments-toggle:hover {
    background-color: rgb(138, 138, 138);
}

.active #comments {
    overflow: scroll;
    min-height: auto;
    max-height: 25rem;
}

/* Media Queries */
@media (max-width: 860px) {
    .inactive .post .score,
    .active .post .score {
        width: 10%;
    }
}

@media (max-width: 670px) {
    .inactive .post .score,
    .active .post .score {
        width: 15%;
    }
}

@media (max-width: 480px) {
    .post .right-side .bottom .title {
        margin-left: 1vw;
        font-size: 3vw;
    }

    .post .right-side .top .author {
        font-size: 1.6vw;
    }

    .post .right-side .top .subreddit {
        font-size: 2vw;
    }

    .inactive .post {
        height: 20vw;
    }

    .active .post {
        height: 70vw;
    }

    .active .post .comments-toggle {
        margin-top: 61vw;
        font-size: 1.5vw;
        height: 6vw;
        width: 6vw;
    }

    .inactive .post .score p,
    .active .post .score p {
        font-size: 1.5vw;
    }
}

